--- a/mech.html
+++ b/mech.html
@@ -50,6 +50,18 @@
     </li>
         </ul>
         <h1 class="text-black-50">Basic Definations</h1><br>
+        The Study of mechanics involves the concept of Space, Time, Mass, Force. <br>
+        <ol>
+            <li><b>Concept of Space: </b> It is essential to fixed the position of a point. To fully define the position of a point in space, we shall need to define some form of reference and coordinate system.</li>
+            <li><b>Concept of Time: </b> It is essential to relate the sequence of the event. <br><b>&nbsp;&nbsp;For Example: </b>Starting and Stoping of the motion of a body.</li>
+            <li><b>Concept of Mass: </b> It is essential as an agency which change or tends to change the state of rest or the state of uniform motion of a body.</li>
+        </ol>
+
+
+
+
+
+
        </div>
 </body>
 
