--- a/mech.html
+++ b/mech.html
@@ -55,7 +55,31 @@
             <li><b>Concept of Space: </b> It is essential to fixed the position of a point. To fully define the position of a point in space, we shall need to define some form of reference and coordinate system.</li>
             <li><b>Concept of Time: </b> It is essential to relate the sequence of the event. <br><b>&nbsp;&nbsp;For Example: </b>Starting and Stoping of the motion of a body.</li>
             <li><b>Concept of Mass: </b> It is essential as an agency which change or tends to change the state of rest or the state of uniform motion of a body.</li>
-        </ol>
+        </ol><br>
+        <h1 class="text-black-50">Fundamental Principles</h1><br>
+        <ul>
+        <li>
+            <b>Newton's 1<sup>st</sup> Law of Motion: </b>Every body continues in a state of rest or of
+            uniform motion in a straight line unless it is employed to change that state by a
+            force imposed on the body.
+
+        </li>
+        <li><b>Newton's 2<sup>nd</sup> Law of Motion: </b>
+            The acceleration of a given particles is
+            proportion to the impressed force and taken place in the direction of the
+            straight line in which the force is impressed. <br><b>OR</b><br>The rate of change of momentum of a body is equal to the resultant force
+            acting on it.</li><br>
+            <img src="/img/1.png" alt="Image Not found"><br>
+            <li><b>Newton's 3<sup>rd</sup> Law of Motion: </b>To every action thereis equal and opposite reaction which means that the forces of action and reaction between two bodies are equal in magnitude but opposite in direction.
+                </li>
+                <li><b>Newton's 4<sup>th</sup> Law of Motion: </b>- A force is defined as the action of one body on another force is the agent which changes or tends to changes the state of rest or uniform motion of a body. A force is a vector because its effects depends on the direction as well as on the magnitude of the action on the body.
+                    <ul>
+                        <li style="margin-left: 1rem;">
+                            The S.I. unit of force is “Newton” which is denoted by (N). 1N force be define as the force which produces an acceleration of <b> 1m/ sec <sup>2</sup> </b>a body of <b>mass 1KG.</b></li>
+                    </ul>
+                </li>
+            </ul>
+    </ul>
 
 
 
