--- a/mech.html
+++ b/mech.html
@@ -80,7 +80,29 @@
                 </li>
             </ul>
     </ul>
-
+    <h3>Examples of Forces:</h3>
+    <ul>
+        <li>Force of gravity on a body. (Also known as weight)</li>
+        <li>Push or Pull exerted upon a body.</li>
+        <li>Force of attraction or repulsion.</li>
+        <li>Force of friction.</li>
+    </ul>
+    
+    <h3>Types of Forces:</h3>
+    <ul>
+        <li>Tensile force</li>
+        <li>Compressive force</li>
+        <li>Shear force</li>
+    </ul>
+    
+    <h3>Characteristics of Force:</h3>
+    <p>A force is completely defined only when the following characteristics are specified:</p>
+    <ul>
+        <li>Magnitude.</li>
+        <li>Point of application.</li>
+        <li>Line of action.</li>
+        <li>Direction.</li>
+    </ul>
 
 
 
