--- a/mech.html
+++ b/mech.html
@@ -69,7 +69,7 @@
             proportion to the impressed force and taken place in the direction of the
             straight line in which the force is impressed. <br><b>OR</b><br>The rate of change of momentum of a body is equal to the resultant force
             acting on it.</li><br>
-            <img src="/img/1.png" alt="Image Not found"><br>
+            <img src="img/1.png" alt="Image Not found"><br>
             <li><b>Newton's 3<sup>rd</sup> Law of Motion: </b>To every action thereis equal and opposite reaction which means that the forces of action and reaction between two bodies are equal in magnitude but opposite in direction.
                 </li>
                 <li><b>Newton's 4<sup>th</sup> Law of Motion: </b>- A force is defined as the action of one body on another force is the agent which changes or tends to changes the state of rest or uniform motion of a body. A force is a vector because its effects depends on the direction as well as on the magnitude of the action on the body.
