--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>   
         <div class="topnav" id="myTopnav">
             <a href="#" class="head"><img src="logo.png" id="imglogo"><div id="heading">Helpdesk</div></a>
-            <a href="index.html" class="active">BDMS</a>
+            <a href="index.html" class="active">DBMS</a>
             <a href="mech.html" class="inactive">Mechanics</a>
             <a href="object.html" class="inactive">OPPS</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
