--- a/mech.html
+++ b/mech.html
@@ -14,7 +14,7 @@
 <body>   
         <div class="topnav" id="myTopnav">
             <a href="#" class="head"><img src="logo.png" id="imglogo"><div id="heading">Helpdesk</div></a>
-            <a href="index.html" class="inactive">BDMS</a>
+            <a href="index.html" class="inactive">DBMS</a>
             <a href="mech.html"  class="active">Mechanics</a>
             <a href="object.html" class="inactive">OPPS</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
