--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             </a>
           </div>
     </div>
-    <div id="body"><br><br><br><br><br><br><br><br>
-       <center> <div class="justify-content-center text-danger"><h1>Work Under Process</h1></div></center>
-       </div>
+    dvx
 </body>
 
 </html>
