--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="index.html" class="active">DBMS</a>
             <a href="mech.html" class="inactive">Mechanics</a>
             <a href="object.html" class="inactive">OPPS</a>
+            <a href="daa.html" class="inactive">DAA</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars" id="bar" style="background-color: transparent;"></i>
             </a>
