--- a/daa.html
+++ b/daa.html
@@ -6,6 +6,10 @@
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
 </head>
+<style>
+
+
+</style>
 <link rel="stylesheet" type="text/css" href="style.css?v=1" />
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -22,8 +26,24 @@
             </a>
           </div>
     </div>
-    <div id="body"><br><br><br><br><br><br><br><br>
-       <center> <div class="justify-content-center text-danger"><h1>Work Under Process</h1></div></center>
+    <div id="body">
+      <h1> DESIGN &nbsp; AND &nbsp; ANALYSIS &nbsp;OF ALGORITHMS </h1>
+
+      <h4> Q1:- WAP in c to implement linear search?</h4> <img src="/code/daa_code_1.png"> <br>
+
+        <h5>Output:</h5>
+        <img src="/output/daa_output_1.png"><br><br>
+        <h4> Q2:- WAP in c to implement binary search  ?</h4>
+      <img src="code/daa_code_2.png"><br><br>
+      <h5> output:</h5>
+      <img src="/output/daa_output_2.png"><br><br>
+      <h4> Q3:- WAP in c to implement Bubble sort?</h4> <img src="/code/daa_code_3.png"> <br>
+
+      <h5>Output:</h5>
+      <img src="/output/daa_output_3.png"><br><br>
+    
+    
+
        </div>
 </body>
 
