--- a/daa.html
+++ b/daa.html
@@ -29,18 +29,18 @@
     <div id="body">
       <h1> DESIGN &nbsp; AND &nbsp; ANALYSIS &nbsp;OF ALGORITHMS </h1>
 
-      <h4> Q1:- WAP in c to implement linear search?</h4> <img src="/code/daa_code_1.png"> <br>
+      <h4> Q1:- WAP in c to implement linear search?</h4> <img src="code/daa_code_1.png"> <br>
 
         <h5>Output:</h5>
-        <img src="/output/daa_output_1.png"><br><br>
+        <img src="output/daa_output_1.png"><br><br>
         <h4> Q2:- WAP in c to implement binary search  ?</h4>
       <img src="code/daa_code_2.png"><br><br>
       <h5> output:</h5>
-      <img src="/output/daa_output_2.png"><br><br>
-      <h4> Q3:- WAP in c to implement Bubble sort?</h4> <img src="/code/daa_code_3.png"> <br>
+      <img src="output/daa_output_2.png"><br><br>
+      <h4> Q3:- WAP in c to implement Bubble sort?</h4> <img src="code/daa_code_3.png"> <br>
 
       <h5>Output:</h5>
-      <img src="/output/daa_output_3.png"><br><br>
+      <img src="output/daa_output_3.png"><br><br>
     
     
 
