--- a/daa.html
+++ b/daa.html
@@ -27,7 +27,7 @@
           </div>
     </div>
     <div id="body">
-      <h1> DESIGN &nbsp; AND &nbsp; ANALYSIS &nbsp;OF ALGORITHMS </h1>
+     <center> <h1> DESIGN &nbsp; AND &nbsp; ANALYSIS &nbsp;OF ALGORITHMS </h1></center>
 
       <h4> Q1:- WAP in c to implement linear search?</h4> <img src="code/daa_code_1.png"> <br>
 
