--- a/daa.html
+++ b/daa.html
@@ -7,7 +7,10 @@
     <title>Helpdesk</title>
 </head>
 <style>
-
+img{
+    width:400px;
+}
+    
 
 </style>
 <link rel="stylesheet" type="text/css" href="style.css?v=1" />
