--- a/daa.html
+++ b/daa.html
@@ -33,7 +33,7 @@
           </div>
     </div>
     <div id="body">
-     <center> <h3> DESIGN &nbsp; AND &nbsp; ANALYSIS &nbsp;OF ALGORITHMS </h3></center>
+     <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
 
       <h4> Q1:- WAP in c to implement linear search?</h4> 
         <img id="img1" src="code/daa_code_1.png"> <br>
