--- a/daa.html
+++ b/daa.html
@@ -54,5 +54,16 @@
 
        </div>
 </body>
-
+<div id="footer">
+        <div id="download">
+            Download data<br>
+            <a href="d/output_1.pdf" download="Ak-download.pdf">Output </a>&nbsp;
+    </div>
+        <br>
+        <a href="https://wa.me/+919122701848">
+        <i class="fa fa-whatsapp" style="font-size:30px;color:green; background-color: transparent;"></i></a>
+        <i class="fa fa-facebook" style="font-size:30px;color:skyblue; background-color: transparent;">&nbsp;&nbsp;</i>
+    <i class="fa fa-twitter" style="font-size:30px;color:rgb(61, 61, 234); background-color: transparent;"></i>
+   &nbsp;&nbsp;&nbsp;&nbsp;
+    </div>
 </html>
