--- a/daa.html
+++ b/daa.html
@@ -55,8 +55,8 @@
 <div id="footer">
         <div id="download">
             Download data<br>
-<!--             <a href="d/output_1.png" download="Ak-download.png">Output</a>&nbsp; -->
-            <a href="https://bit.ly/3ZgXkBb" download="Ak-download.png">Output</a>&nbsp;
+            <a href="d/output_1.png" download="Ak-download.png">Output</a>&nbsp;
+<!--             <a href="https://bit.ly/3ZgXkBb" download="Ak-download.png">Output</a>&nbsp; -->
     </div>
         <br>
         <a href="https://wa.me/+919122701848">
