--- a/daa.html
+++ b/daa.html
@@ -10,7 +10,9 @@
 <style>
 #img1{
     width:300px;
+    transition:transform .2s ease-in-out;
 }
+    #img1:hover{transform:scale(1.2);cursor:zoom-in}
     h3{
     margin-left: 0 !important;
     }
