--- a/daa.html
+++ b/daa.html
@@ -37,16 +37,22 @@
     </div>
     <div id="body">
      <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
-
+<!-- Start -->
       <h4> Q1:- WAP in c to implement linear search?</h4> 
         <img id="img1" src="code/daa_code_1.png"> <br>
 
         <h5>Output:</h5>
         <img id="img1"  src="output/daa_output_1.png"><br><br>
+        
+  <!-- End -->
+
         <h4> Q2:- WAP in c to implement binary search  ?</h4>
       <img id="img1"  src="code/daa_code_2.png"><br><br>
       <h5> output:</h5>
       <img id="img1"  src="output/daa_output_2.png"><br><br>
+
+
+
       <h4> Q3:- WAP in c to implement Bubble sort?</h4> 
         <img id="img1"  src="code/daa_code_3.png"> <br>
 
