--- a/object.html
+++ b/object.html
@@ -24,8 +24,47 @@
           </div>
     </div>
     <div id="body">
-      <div id="body"><br><br><br><br><br><br><br><br>
-        <center> <div class="justify-content-center text-danger"><h1>Work Under Process</h1></div></center>
+        <center> <div class="justify-content-center text-danger"><h1> OBJECT-ORIENTED-PROGRAMING-SYSTEM</h1></div></center>
+
+         <h4> Q1:- WAP to store student details using class ?</h4> 
+        <img id="img1" src="code/oops_code_1.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_1.png"><br><br><br>
+
+
+        <h4> Q2:- WAP to enter student details using function ?</h4>
+        <img id="img1" src="code/oops_code_2.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1" src="output/oops_output_2.png"><br><br><br>
+
+        
+        <h4> Q3:- How do create an object without name of class ?</h4>
+        <img id ="img1"  src="code/oops_code_3.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_3.png"><br><br><br>
+
+
+        <h4> Q4:- WAP to find the area of rectangle using class ?</h4>
+        <img id ="img1"  src="code/oops_code_4.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_4.png"><br><br><br>
+
+
+        <h4> Q5:- WAP to find simple Interest using class ?</h4>
+        <img id ="img1"  src="code/oops_code_5.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_5.png"><br><br><br>
+
+        <h4> Q6:- WAP to find largest among two number ?</h4>
+        <img id ="img1"  src="code/oops_code_6.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_6.png"><br><br><br>
+
+
+        <h4> Q7:- WAP to find out the largest no b/w two number using the concept of static keyword ?</h4>
+        <img id ="img1"  src="code/oops_code_7.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_7.png"><br><br><br>
         </div>
        </div>
 </body>
