--- a/object.html
+++ b/object.html
@@ -23,6 +23,18 @@
             </a>
           </div>
     </div>
+    <style>
+      #img1{
+          width:300px;
+          transition:transform .2s ease-in-out;
+      }
+          #img1:hover{transform:scale(1.2);cursor:zoom-in}
+          h3{
+          margin-left: 0 !important;
+          }
+          
+      
+      </style>
     <div id="body">
         <center> <div class="justify-content-center text-danger"><h1> OBJECT-ORIENTED-PROGRAMING-SYSTEM</h1></div></center>
 
