--- a/object.html
+++ b/object.html
@@ -36,7 +36,7 @@
       
       </style>
     <div id="body">
-        <center> <div class="justify-content-center text-danger"><h1> OBJECT-ORIENTED-PROGRAMING-SYSTEM</h1></div></center>
+        <center> <div class="justify-content-center text-danger"><h4> OBJECT ORIENTED PROGRAMING SYSTEM</h4></div></center>
 
          <h4> Q1:- WAP to store student details using class ?</h4> 
         <img id="img1" src="code/oops_code_1.png"> <br>
