--- a/daa.html
+++ b/daa.html
@@ -34,7 +34,7 @@
               <i class="fa fa-bars" id="bar" style="background-color: transparent;"></i>
             </a>
           </div>
-    </div>
+    </div><br><br><br>
     <div id="body">
      <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
 <!-- Start -->
