--- a/mech.html
+++ b/mech.html
@@ -22,7 +22,7 @@
               <i class="fa fa-bars" id="bar" style="background-color: transparent;"></i>
             </a>
           </div>
-    </div>
+    </div><br><br><br><br>
     <div id="body">
         <h1 class="text-black-50">Definations</h1><br>
         <ul>
