--- a/object.html
+++ b/object.html
@@ -34,7 +34,7 @@
           }
           
       
-      </style><br><br><br>
+      </style><br><br>
     <div id="body">
         <center> <div class="justify-content-center text-danger"><h4> OBJECT ORIENTED PROGRAMING SYSTEM</h4></div></center>
 
