--- a/daa.html
+++ b/daa.html
@@ -36,6 +36,9 @@
           </div>
     </div><br><br><br>
     <div id="body">
+      <div id="up">
+        <i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i>
+      </div>
      <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
 <!-- Start -->
       <h4> Q1:- WAP in c to implement linear search?</h4> 
