--- a/mech.html
+++ b/mech.html
@@ -24,6 +24,9 @@
           </div>
     </div><br><br><br>
     <div id="body">
+        <div id="up">
+            <i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i>
+          </div>  
         <h1 class="text-black-50">Definations</h1><br>
         <ul>
             <li>
