--- a/daa.html
+++ b/daa.html
@@ -20,7 +20,7 @@
     
 
 </style>
-<link rel="stylesheet" type="text/css" href="style.css?v=3" />
+<link rel="stylesheet" type="text/css" href="style.css?v=8" />
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,7 +39,9 @@
     </div><br><br><br>
     <div id="body">
       <div id="up">
-        <i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i>
+        <a href="#" id="goToTopButton" class="go-to-top-button">
+          <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
+      </a>
       </div>  
      <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
 <!-- Start -->
