--- a/object.html
+++ b/object.html
@@ -7,7 +7,7 @@
             "width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
 </head>
-<link rel="stylesheet" type="text/css" href="style.css?v=1" />
+<link rel="stylesheet" type="text/css" href="style.css?v=8" />
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,8 +37,10 @@
       </style><br><br><br>
     <div id="body">
       <div id="up">
-        <i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i>
-      </div>  
+        <a href="#" id="goToTopButton" class="go-to-top-button">
+          <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
+      </a>
+      </div>
         <center> <div class="justify-content-center text-danger"><h4> OBJECT ORIENTED PROGRAMING SYSTEM</h4></div></center>
 
          <h4> Q1:- WAP to store student details using class ?</h4> 
