--- a/daa.html
+++ b/daa.html
@@ -65,6 +65,12 @@
 
       <h5>Output:</h5>
       <img id="img1"  src="output/daa_output_3.png"><br><br>
+
+      <h4> Q4:- WAP in c to implement Insertion sort?</h4>
+      <img id="img1"  src="code/daa_code_4.png"> <br>
+
+      <h5>Output:</h5>
+      <img id="img1"  src="output/daa_output_4.png"><br><br>
        </div>
 </body>
 <div id="footer">
