--- a/object.html
+++ b/object.html
@@ -82,6 +82,10 @@
         <img id ="img1"  src="code/oops_code_7.png"> <br>
         <h5>Output:</h5>
         <img id="img1"  src="output/oops_output_7.png"><br><br><br>
+        <h4> Q8:- WAP to Calculate total marks obtained by student according to roll no. ?</h4>
+        <img id ="img1"  src="code/oops_code_8.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_8.png"><br><br><br>
         </div>
        </div>
 </body>
