--- a/object.html
+++ b/object.html
@@ -35,6 +35,12 @@
           
       
       </style><br><br><br>
+      <div style="background-color: skyblue; padding: 10px;">
+        <div>
+         <a href="object.html">Codes</a>
+          <a href="oops notes.html">Notes</a>
+        </div>
+      </div>
     <div id="body">
       <div id="up">
         <a href="#" id="goToTopButton" class="go-to-top-button">
@@ -82,10 +88,6 @@
         <img id ="img1"  src="code/oops_code_7.png"> <br>
         <h5>Output:</h5>
         <img id="img1"  src="output/oops_output_7.png"><br><br><br>
-        <h4> Q8:- WAP to Calculate total marks obtained by student according to roll no. ?</h4>
-        <img id ="img1"  src="code/oops_code_8.png"> <br>
-        <h5>Output:</h5>
-        <img id="img1"  src="output/oops_output_8.png"><br><br><br>
         </div>
        </div>
 </body>
