--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             </a>
           </div>
     </div>
+<div id="body">
+  <br><br><br><br><br><a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button></center></a>
+  <br><center>
+    
+  <embed src="https://drive.google.com/file/d/1FmcoimFMioRD_SaiD9H34Ytn-n1slc1E/preview" width="600rem" height="650rem" type="application/pdf">
+    <!-- <iframe src="pdf/Database Management System (Debuggers).pdf" style="width:600px; height:650px;" frameborder="0"></iframe> -->
+
+</center></div><br><br>
 
 </body>
 
