--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <div id="body">
   <br><br><br><br><br><a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button></center></a>
   <br><center>
-    
+     <center>
+  Click on Open⬇️
+</center>
   <embed src="https://drive.google.com/file/d/1FmcoimFMioRD_SaiD9H34Ytn-n1slc1E/preview" width="400px" height="600px" type="application/pdf">
     <!-- <iframe src="pdf/Database Management System (Debuggers).pdf" style="width:600px; height:650px;" frameborder="0"></iframe> -->
 
