--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
 </head>
+<link rel="icon" href="logo.png" type="image/png">
 <link rel="stylesheet" type="text/css" href="style.css?v=1" />
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>   
+ 
         <div class="topnav" id="myTopnav">
             <a href="#" class="head"><img src="logo.png" id="imglogo"><div id="heading">Helpdesk</div></a>
             <a href="index.html" class="active">DBMS</a>
@@ -23,7 +25,12 @@
           </div>
     </div>
 <div id="body">
-  <br><br><br><br><br><a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button></center></a>
+  
+  <br><br><br><br><br><a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button>
+  </center></a>
+  <center>
+  Click on Open⬇️
+</center>
   <br><center>
     
   <embed src="https://drive.google.com/file/d/1FmcoimFMioRD_SaiD9H34Ytn-n1slc1E/preview" width="600rem" height="650rem" type="application/pdf">
