--- a/mech.html
+++ b/mech.html
@@ -8,6 +8,7 @@
     <title>Helpdesk</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css?v=8" />
+<link rel="icon" href="logo.png" type="image/png">
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
