--- a/daa.html
+++ b/daa.html
@@ -20,6 +20,7 @@
     
 
 </style>
+<link rel="icon" href="logo.png" type="image/png">
 <link rel="stylesheet" type="text/css" href="style.css?v=8" />
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
