adding Q8 friend function

--- a/object.html
+++ b/object.html
@@ -90,6 +90,11 @@
         <img id ="img1"  src="code/oops_code_7.png"> <br>
         <h5>Output:</h5>
         <img id="img1"  src="output/oops_output_7.png"><br><br><br>
+
+        <h4> Q8:- WAP to find out the Bigger object b/w to classes using friend function ?</h4>
+        <img id ="img1"  src="code/oops_code_9.png"> <br>
+        <h5>Output:</h5>
+        <img id="img1"  src="output/oops_output_9.png"><br><br><br>
         </div>
        </div>
 </body>
