--- a/daa.html
+++ b/daa.html
@@ -73,6 +73,12 @@
 
       <h5>Output:</h5>
       <img id="img1"  src="output/daa_output_4.png"><br><br>
+
+        <h4> Q5:- WAP in c to implement Selection sort?</h4>
+      <img id="img1"  src="code/daa_code_5.png"> <br>
+
+      <h5>Output:</h5>
+      <img id="img1"  src="output/daa_output_5.png"><br><br>
        </div>
 </body>
 <div id="footer">
