--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       </header>
 <div id="body">
- 
+ /*
   <a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button>
   </center></a>
   <center>
@@ -69,7 +69,7 @@
   <embed src="https://drive.google.com/file/d/1FmcoimFMioRD_SaiD9H34Ytn-n1slc1E/preview" width="600rem" height="650rem" type="application/pdf">
     <!-- <iframe src="pdf/Database Management System (Debuggers).pdf" style="width:600px; height:650px;" frameborder="0"></iframe> -->
 
-</center></div><br><br>
+</center>*/</div><br><br>
 
 </div>
 
