Typo in header OPPS is corrected to OOPS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="nav-item"><a href="index.html" class="nav-link">DBMS</a></li>
             <li class="nav-item"><a href="mech.html" class="nav-link">Mechanics</a></li>
             <li class="nav-item dropdown" id="myDropdown">
-              <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OPPS</a>
+              <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
               <ul class="dropdown-menu" data-bs-popper="static">
                 <li><a class="nav-link dropdown-item" href="object.html">Code</a></li>
                 <li><a class="nav-link dropdown-item" href="oops notes.html">Notes</a></li>
