--- a/mech.html
+++ b/mech.html
@@ -332,7 +332,7 @@
     <b>Q&GreaterGreater; A sphere weighing 100N is tide to a smooth wall by a string as 
         shown in fig. Find the tension T in the string and reaction R from the ball.
     </b><br>
-    <img src="img/11.1.png" alt="Image Not found "><br>
+    <img src="img/11.1.png" alt="Image Not found" width="150px" ><br>
     <b>Sol -</b><br>
 
         from lami's theorem,<br>
@@ -345,7 +345,9 @@
     <b>Q&GreaterGreater;Find the magnitude and direction of a given system of forces
         as shown in the fig.
     </b><br>
-    <b>Sol -</b>
+    <img src="img/12.2.png" alt="Image Not found" width="200px"><br>
+    <b>Sol -</b><br>
+    <img src="img/12.1.png" alt="Image Not found" width="200px"><br>
         &sum;F<sub>x</sub>=0<br>
         &DoubleRightArrow; 300+400cos30&deg;+600cos50&deg;-1200cos65&deg;=0<br>
         &DoubleRightArrow; 524.94N<br>
@@ -559,6 +561,184 @@ And, b/2=4/2=2m(distance)<br><br>
 putting R<sub>A</sub> in eq1,<br>
 &therefore;R<sub>B</sub>+3333.34 = 4400<br>
 &DoubleRightArrow; R<sub>B</sub>  = 666.67N <b>Ans</b> <br><br>
+<b>
+Q&GreaterGreater;A horizontal force 'P' is as shown in fig. keeps the weight of 100N
+is in equilibrium. Find the magnitude of force 'P' and the tension in the string. <br>
+<img src="img/23.png" alt="Image Not found" width="200px"><br>
+Sol -</b><br>
+
+Free body diagram,<br>
+<img src="img/23.1.png" alt="Image Not found" width="200px"><br>
+from lami's theorem,<br>
+&DoubleRightArrow; P/sin(170&deg;) = T/sin(90&deg;) = W/sin(100&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; T/sin90&deg; = W/sin100&deg;<br>
+&DoubleRightArrow;T=101.542N <b>Ans</b><br>
+on comparing,<br>
+&DoubleRightArrow;p/sin170&deg; = w/sin100&deg;<br>
+&DoubleRightArrow;P = 17.632N <b>Ans</b><br><br>
+
+<b>
+Q&GreaterGreater;Calculate the tension in the string AB & AC, if the weight of 200N is 
+attached by the two string as shown in fig. <br>
+<img src="img/24.png" alt="Image Not found" width="200px"><br>
+Sol -</b><br>
+
+Free body diagram,<br>
+<img src="img/24.1.png" alt="Image Not found" width="200px"><br>
+from lami's theorem,<br>
+&DoubleRightArrow; T<sub>AB</sub>/sin(150&deg;) = T<sub>AC</sub>/sin(120&deg;) = 200/sin(100&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow;T<sub>AB</sub>/sin(150&deg;) = 200/sin(100&deg;)<br>
+&DoubleRightArrow; T<sub>AB</sub> = 100N <b>Ans</b><br>
+on comparing,<br>
+&DoubleRightArrow;T<sub>AC</sub>/sin(120&deg;) = 200/sin(100&deg;)<br>
+&DoubleRightArrow; T<sub>AC</sub> = 173.205N <b>Ans</b><br><br>
+
+<b>Q&GreaterGreater; Three bars are pinned together at B & C and supported by a hinged at
+    A & D as shown in fig. to form a 4 link mechanism. Determine the value of 4 link that
+    will prevent the motion. <br>
+    <img src="img/25.png" alt="Image Not found" width="300px"><br>
+Sol -</b><br>
+Free body diagram at joint B,<br>
+<img src="img/25.1.png" alt="Image Not found" width="150px"><img src="img/25.2.png" alt="Image Not found" width="200px"><br>     
+From lami's theorem,<br>
+&DoubleRightArrow; F<sub>AB</sub>/sin(135&deg;) = F<sub>BC</sub>/sin(105&deg;) = 800/sin(120&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; F<sub>BC</sub>/sin(105&deg;) = 800/sin(120&deg;)<br>
+&DoubleRightArrow; F<sub>BC</sub> = 892.284N <br><br>
+Free body diagram at joint C,<br>
+<img src="img/25.3.png" alt="Image Not found" width="150px"><img src="img/25.4.png" alt="Image Not found" width="150px"><br>
+&DoubleRightArrow; F<sub>BC</sub>/sin(135&deg;) = F<sub>CD</sub>/sin(120&deg;)=P/sin(105&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; F<sub>BC</sub>/sin(135&deg;) = P/sin(105&deg;)<br>
+&DoubleRightArrow; P = 1218.882N <b>Ans</b><br><br>
+
+<b>Q&GreaterGreater; Two equal load of 2500N are supported by a flexible string ABCD at 
+    point B and C. Find the tension in the portion AB, BC and CD of string. <br>
+    <img src="img/26.png" alt="Image Not found" width="300px"><br>
+Sol -</b><br>
+Free body diagram at joint B,<br>
+<img src="img/26.1.png" alt="Image Not found" width="200px"><br>     
+From lami's theorem,<br>
+&DoubleRightArrow; T<sub>AB</sub>/sin(60&deg;) = T<sub>BC</sub>/sin(150&deg;) = 2500/sin(150&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; T<sub>AB</sub>/sin(60&deg;) = 2500/sin(150&deg;)<br>
+&DoubleRightArrow; T<sub>AB</sub> = 4330.127N <b>Ans</b><br>
+on comparing,<br>
+&DoubleRightArrow; T<sub>BC</sub>/sin(60&deg;) = 2500/sin(150&deg;)<br>
+&DoubleRightArrow; T<sub>BC</sub> = 2500N <b>Ans</b><br><br>
+Free body diagram at joint C,<br>
+<img src="img/26.2.png" alt="Image Not found" width="200px"><br>
+&DoubleRightArrow; T<sub>BC</sub>/sin(120&deg;) = T<sub>CD</sub>/sin(120&deg;)=2500/sin(120&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; T<sub>CD</sub>/sin(120&deg;) = 2500/sin(120&deg;)<br>
+&DoubleRightArrow; T<sub>CD</sub> = 2500N <b>Ans</b><br><br>
+
+<b>Q&GreaterGreater; An electric bulb weight 15N hangs from C by two string AC & BC. The 
+    string AC is inclined at 60&deg; to the horizontal & BC at 45&deg; to the vertical as 
+    shown in fig. the string AC & BC. <br>
+    <img src="img/27.png" alt="Image Not found" width="200px"><br>
+Sol -</b><br>
+Free body diagram,<br>
+<img src="img/27.1.png" alt="Image Not found" width="200px"><br>
+From lami's theorem,<br>
+&DoubleRightArrow; F<sub>AC</sub>/sin(135&deg;) = F<sub>BC</sub>/sin(150&deg;) = 15/sin(75&deg;)<br>
+on comparing,<br>
+&DoubleRightArrow; F<sub>AC</sub>/sin(135&deg;) = 15/sin(75&deg;)<br>
+&DoubleRightArrow; F<sub>AC</sub> = 10.98N <br>
+on comparing,<br>
+&DoubleRightArrow; F<sub>BC</sub>/sin(150&deg;) = 15/sin(75&deg;)<br>
+&DoubleRightArrow; F<sub>BC</sub> = 7.764N <br><br>
+
+<h3>Centroid & centre of gravity -</h3>
+<li> <b>Centre of gravity -</b></li>
+A body is compose of no. of particle is attracted by forces, due to gravity of Earth towards
+its centre since the body is negligible as compared to the Earth all forces are consider to
+be parallel with the resultant. The resultant of this force is known as centre of gravity.<br>
+
+Centre of gravity of a body is define as the point which resultant of the gravitational 
+force (weight) act for an orientation of the body.<br>
+<br>
+<li><b>Centroid -</b></li>
+The Centroid is referred as geometrical centre of a uniform density body. This means the 
+object has its weight distributed equally across all body parts. If the body is homogeneous
+(having constant density), its centre of gravity equivallent to the centroid.<br<br>
+
+<b><li>Difference between centre of gravity and centroid -</li></b>
+<table border="1" cellspacing="0">
+    <tr>
+        <th bgcolor="wheat">Centre of gravity</th>
+        <th bgcolor="wheat">Centroid</th>
+    </tr>
+    <tr>
+        <td><li>The point where the total weight of the body focuses upon.</li></td>
+        <td><li>It is referred to as the geometrical centre of a body.</li></td>
+    </tr>
+    <tr>
+        <td><li>It is the point where the gravitational force (weight) acts on the body.</li></td>
+        <td><li>It is referred to the centre of gravity of uniform density objects.</li></td>
+    </tr>
+    <tr>
+        <td><li>It is denoted by g.</li></td>
+        <td><li>It is denoted by c.</li></td>
+    </tr>
+    <tr>
+        <td><li>Centre of Gravity in a uniform gravitational field is the average of all points,
+             weighted by local density or specific weight.</li></td>
+        <td><li>The centroid is a point in a plane area in such a way that the moment of area about
+             any axis throughout that point is 0.</li></td>
+    </tr>
+    <tr>
+        <td><li>It is a physical behaviour of the object, a point where all the weight of an object is 
+            acting.</li></td>
+        <td><li>It is a geometrical behaviour. It is the centre of measure of the amount of geometry.</li></td>
+    </tr>
+
+</table><br>
+
+<b>Centre of gravity formula -</b><br>
+<ol type="1">
+    <li>
+        Cylinder - <br>
+        <img src="img/28.png" alt="Image Not found" width="200px"><br> 
+        volume = &pi;r&sup2;h<br>
+        x = r<br>
+        y = h/2<br>
+    </li>
+    <br>
+    <li>
+        Cone - <br>
+        <img src="img/29.png" alt="Image Not found" width="200px"><br>
+        volume = 1/3&pi;r&sup2;h<br>
+        x = r<br>
+        y = h/4<br>
+    </li>
+    <br>
+    <li>
+        Sphere - <br>
+        <img src="img/30.png" alt="Image Not found" width="150px"><br>
+        volume = 4/3&pi;r&sup3;<br>
+        x = r<br>
+        y = r<br>
+    </li>
+    <br>
+    <li>
+        Hemisphere - <br>
+        <img src="img/31.png" alt="Image Not found" width="200px"><br>
+        volume = 2/3&pi;r&sup3;<br>
+        x = r<br>
+        y = 3r/8<br>
+    </li>
+    <br>
+    <li>
+        Cube - <br>
+        <img src="img/32.png" alt="Image Not found" width="200px"><br>
+        volume = a&sup3;<br>
+        x = a/2<br>
+        y = a/2<br>
+    </li>
+</ol>
 
 
 
