--- a/mech.html
+++ b/mech.html
@@ -10,6 +10,11 @@
 <link rel="stylesheet" type="text/css" href="style.css?v=8" />
 <link rel="icon" href="logo.png" type="image/png">
 <script src="script.js"></script>
+	<style>
+		#set_img{
+			width: 80%;
+		}
+	</style>
 <script
 	src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 	integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -113,7 +118,7 @@
             proportion to the impressed force and taken place in the direction of the
             straight line in which the force is impressed. <br><b>OR</b><br>The rate of change of momentum of a body is equal to the resultant force
             acting on it.</li><br>
-            <img src="img/1.png" alt="Image Not found"><br>
+            <img src="img/1.png" alt="Image Not found" id="set_img"><br>
             <li><b>Newton's 3<sup>rd</sup> Law of Motion: </b>To every action thereis equal and opposite reaction which means that the forces of action and reaction between two bodies are equal in magnitude but opposite in direction.
                 </li>
                 </ul>
