--- a/oops notes.html
+++ b/oops notes.html
@@ -21,7 +21,10 @@
 	rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
 />
-<div id="preprocessor"></div>
+<center>
+  <div id="preprocessor" >
+    <img src="img/preloader.gif">
+    </div></center>  
 <body>   
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
     <div class="container-fluid">
