--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 	rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
 />
-<div id="preprocessor">
-  <div class="spinner-grow" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="spinner-grow" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
+<center>
+<div id="preprocessor" >
+  <img src="img/preloader.gif">
+  </div></center>
   </div>
 </div>
 <body>  
