--- a/daa.html
+++ b/daa.html
@@ -36,7 +36,11 @@
 <script src="script.js"></script>
 
 
-<div id="preprocessor"></div>
+<center>
+  <div id="preprocessor" >
+    <img src="img/preloader.gif">
+    </div></center>
+  
 <body> 
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
     <div class="container-fluid">
