Contibution List added

--- a/daa.html
+++ b/daa.html
@@ -116,12 +116,20 @@
             Download data<br>
             <a href="d/output_1.png" download="Ak-download.png">Output</a>&nbsp;
 
-    </div>
+    </div></div>
         <br>
-        <a href="https://wa.me/+919122701848">
-        <i class="fa fa-whatsapp" style="font-size:30px;color:green; background-color: transparent;"></i></a>
-        <i class="fa fa-facebook" style="font-size:30px;color:skyblue; background-color: transparent;">&nbsp;&nbsp;</i>
-    <i class="fa fa-twitter" style="font-size:30px;color:rgb(61, 61, 234); background-color: transparent;"></i>
-   &nbsp;&nbsp;&nbsp;&nbsp;
+        <div style="display: flex; justify-content: space-between;">
+        <a href="Contibutors.html" style="display: flex;">
+      <div style="background-color: aqua; padding: 2px; border-radius: 5px; margin: 5px; font-size: large;">
+        Contributors
+      </div>
+        </a>
+        <div>
+          <a href="https://wa.me/+919122701848">
+            <i class="fa fa-whatsapp" style="font-size:30px;color:green; background-color: transparent;"></i></a>
+            <i class="fa fa-facebook" style="font-size:30px;color:skyblue; background-color: transparent;">&nbsp;&nbsp;</i>
+        <i class="fa fa-twitter" style="font-size:30px;color:rgb(61, 61, 234); background-color: transparent;"></i>
+       &nbsp;&nbsp;&nbsp;&nbsp;
+        </div>
     </div>
 </html>
