--- a/object.html
+++ b/object.html
@@ -32,7 +32,7 @@
         
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
     <div class="container-fluid">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <img src="logo.png" id="imglogo">
         <span class="fs-4 mr-5 lo" ><h2 class="bold-text">Helpdesk</h2></span>
       </a>
