--- a/daa.html
+++ b/daa.html
@@ -54,7 +54,7 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
-          <li class="nav-item"><a href="index.html" class="nav-link">DBMS</a></li>
+          <li class="nav-item"><a href="dbms.html" class="nav-link">DBMS</a></li>
           <li class="nav-item"><a href="mech.html" class="nav-link">Mechanics</a></li>
           <li class="nav-item dropdown" id="myDropdown">
             <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
