--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Helpdesk</title>
 </head>
+<style>
+  #btn{
+    padding: 5px;
+    background-color: aqua;
+    border: none;
+    border-radius: 5px;
+
+  }
+  #btn:hover{
+    background-color: rgb(194, 245, 245);
+  }
+</style>
 <link rel="stylesheet" type="text/css" href="style.css?v=1" />
 <script src="script.js"></script>
 <script
@@ -33,39 +45,17 @@
           <img src="logo.png" id="imglogo">
           <span class="fs-4 mr-5 lo" ><h2 class="bold-text">Helpdesk</h2></span>
         </a>
-  
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
-            <li class="nav-item"><a href="index.html" class="nav-link">DBMS</a></li>
-            <li class="nav-item"><a href="mech.html" class="nav-link">Mechanics</a></li>
-            <li class="nav-item dropdown" id="myDropdown">
-              <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
-              <ul class="dropdown-menu" data-bs-popper="static">
-                <li><a class="nav-link dropdown-item" href="object.html">Code</a></li>
-                <li><a class="nav-link dropdown-item" href="oops notes.html">Notes</a></li>
-              </ul>
-              </li>
-              <li class="nav-item"><a href="daa.html" class="nav-link">DAA</a></li>
-            </ul>
-        </div>
+
       </div>
 
-      </header>
+      </header><center>
 <div id="body">
- <!--
-  <a href="whatsapp://send?text=DBMS Notes: https://bit.ly/3EyMflG" data-action="share/whatsapp/share"><center><button>Share</button>
-  </center></a>
-  <center>
-  Click on Open⬇️
-</center>
-  <br><center>
-    
-  <embed src="https://drive.google.com/file/d/1FmcoimFMioRD_SaiD9H34Ytn-n1slc1E/preview" width="600rem" height="650rem" type="application/pdf">-->
-    <!-- <iframe src="pdf/Database Management System (Debuggers).pdf" style="width:600px; height:650px;" frameborder="0"></iframe> -->
-
+  <div style="margin-top: 20%;">
+    <p style="color: red;">Website is Down Now !!!</p>
+    <p>Download Our Application</p>  
+  </div>
+<a href="app/Helpdesk.apk" download="Helpdesk.apk"><input type="button" value="Download" id="btn"></a>
+<p style="margin-top: 80%; color: red;">With ❤ Team Debugger</p>
 </center></div><br><br>
 
 </div>
