--- a/daa.html
+++ b/daa.html
@@ -1,132 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Helpdesk</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
 </head>
-<script
-	src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-	integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-	crossorigin="anonymous"
-></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link
-	rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
-/>
-<style>
-#img1{
-    width:300px;
-    transition:transform .2s ease-in-out;
-}
-    #img1:hover{transform:scale(1.2);cursor:zoom-in}
-    h3{
-    margin-left: 0 !important;
-    }
+<script>
+  function redirect(){
+    window.location.href = "index.html";
+  }
+</script>
+<body onload="redirect();">
   
-    
-
-</style>
-<link rel="icon" href="logo.png" type="image/png">
-<link rel="stylesheet" type="text/css" href="style.css?v=8" />
-<script src="script.js"></script>
-
-
-
-  
-<body> 
-  <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
-    <div class="container-fluid">
-      <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="logo.png" id="imglogo">
-        <span class="fs-4 mr-5 lo" ><h2 class="bold-text">Helpdesk</h2></span>
-      </a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
-          <li class="nav-item"><a href="dbms.html" class="nav-link">DBMS</a></li>
-          <li class="nav-item"><a href="mech.html" class="nav-link">Mechanics</a></li>
-          <li class="nav-item dropdown" id="myDropdown">
-            <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
-            <ul class="dropdown-menu" data-bs-popper="static">
-              <li><a class="nav-link dropdown-item" href="object.html">Code</a></li>
-              <li><a class="nav-link dropdown-item" href="oops notes.html">Notes</a></li>
-            </ul>
-            </li>
-            <li class="nav-item"><a href="daa.html" class="nav-link">DAA</a></li>
-          </ul>
-      </div>
-    </div>
-
-    </header>
-    <div id="body">
-      <div id="up">
-        <a href="#" id="goToTopButton" class="go-to-top-button">
-          <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
-      </a>
-      </div>  
-     <center><u style="color:black;"> <h4>DESIGN AND ANALYSIS OF ALGORITHMS</h4></u></center>
-<!-- Start -->
-      <h4> Q1:- WAP in c to implement linear search?</h4> 
-        <img id="img1" src="code/daa_code_1.png"> <br>
-
-        <h5>Output:</h5>
-        <img id="img1"  src="output/daa_output_1.png"><br><br>
-        
-  <!-- End -->
-
-        <h4> Q2:- WAP in c to implement binary search  ?</h4>
-      <img id="img1"  src="code/daa_code_2.png"><br><br>
-      <h5> output:</h5>
-      <img id="img1"  src="output/daa_output_2.png"><br><br>
-
-
-
-      <h4> Q3:- WAP in c to implement Bubble sort?</h4> 
-        <img id="img1"  src="code/daa_code_3.png"> <br>
-
-      <h5>Output:</h5>
-      <img id="img1"  src="output/daa_output_3.png"><br><br>
-
-      <h4> Q4:- WAP in c to implement Insertion sort?</h4>
-      <img id="img1"  src="code/daa_code_4.png"> <br>
-
-      <h5>Output:</h5>
-      <img id="img1"  src="output/daa_output_4.png"><br><br>
-
-        <h4> Q5:- WAP in c to implement Selection sort?</h4>
-      <img id="img1"  src="code/daa_code_5.png"> <br>
-
-      <h5>Output:</h5>
-      <img id="img1"  src="output/daa_output_5.png"><br><br>
-       </div>
 </body>
-<div id="footer">
-        <div id="download">
-            Download data<br>
-            <a href="d/output_1.png" download="Ak-download.png">Output</a>&nbsp;
-
-    </div></div>
-        <br>
-        <div style="display: flex; justify-content: space-between;">
-        <a href="Contibutors.html" style="display: flex;">
-      <div style="background-color: aqua; padding: 2px; border-radius: 5px; margin: 5px; font-size: large;">
-        Contributors
-      </div>
-        </a>
-        <div>
-          <a href="https://wa.me/+919122701848">
-            <i class="fa fa-whatsapp" style="font-size:30px;color:green; background-color: transparent;"></i></a>
-            <i class="fa fa-facebook" style="font-size:30px;color:skyblue; background-color: transparent;">&nbsp;&nbsp;</i>
-        <i class="fa fa-twitter" style="font-size:30px;color:rgb(61, 61, 234); background-color: transparent;"></i>
-       &nbsp;&nbsp;&nbsp;&nbsp;
-        </div>
-    </div>
 </html>
