--- a/oops notes_updated.html
+++ b/oops notes_updated.html
@@ -35,16 +35,16 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav nav-pills navbar-nav ms-auto" id="myNav">
-          <li class="nav-item"><a href="dbms.html" class="nav-link">DBMS</a></li>
-          <li class="nav-item"><a href="mech.html" class="nav-link">Mechanics</a></li>
+          <li class="nav-item"><a href="dbms_updated.html" class="nav-link">DBMS</a></li>
+          <li class="nav-item"><a href="mech_updated.html" class="nav-link">Mechanics</a></li>
           <li class="nav-item dropdown" id="myDropdown">
             <a class="nav-link dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="false">OOPS</a>
             <ul class="dropdown-menu" data-bs-popper="static">
-              <li><a class="nav-link dropdown-item" href="object.html">Code</a></li>
-              <li><a class="nav-link dropdown-item" href="oops notes.html">Notes</a></li>
+              <li><a class="nav-link dropdown-item" href="object_updated.html">Code</a></li>
+              <li><a class="nav-link dropdown-item" href="oops notes_updated.html">Notes</a></li>
             </ul>
             </li>
-            <li class="nav-item"><a href="daa.html" class="nav-link">DAA</a></li>
+            <li class="nav-item"><a href="daa_updated.html" class="nav-link">DAA</a></li>
           </ul>
       </div>
     </div>
