--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p style="color: red;">Website is Down Now !!!</p>
     <p>Download Our Application</p>  
   </div>
-<a href="app/Helpdesk.apk" download="Helpdesk.apk"><input type="button" value="Download" id="btn"></a>
+<a href="App/Helpdesk.apk" download="Helpdesk.apk"><input type="button" value="Download" id="btn"></a>
 <p style="margin-top: 80%; color: red;">With ❤ Team Debugger</p>
 </center></div><br><br>
 
